# rust-ftx

./: .gitignore  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: index.html
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/order/: mod.rs
crates/engine/src/order_book/: mod.rs
crates/match-engine/: Cargo.toml
crates/match-engine/src/: lib.rs
crates/match-engine/src/db/: mod.rs
crates/match-engine/src/order/: mod.rs
crates/match-engine/src/order_book/: mod.rs
crates/match_engine/: Cargo.toml
crates/match_engine/src/order_book/: mod.rs
