[package]
name = "match_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db", version = "0.1.0", default-features = false }
sorted-insert = "0.2.3"
anyhow = "1.0.71"
lazy_static = "1.4.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"